modificacion del  dropdown menu

--- a/pages/ejemplo.html
+++ b/pages/ejemplo.html
@@ -147,6 +147,7 @@
                 <a class="dropdown-item" href="../pages/gpu.html">GPU</a>
                 <a class="dropdown-item" href="../pages/mouse.html">Mouse</a>
                 <a class="dropdown-item" href="../pages/teclados.html">Teclado</a>
+                <a class="dropdown-item" href="../pages/placamadres.html">placamadres</a>
               </div>
 
             </li>
