--- a/pages/carrito.html
+++ b/pages/carrito.html
@@ -1,9 +1,7 @@
-<!doctype html>
-<html lang="es" data-bs-theme="auto">
+<!DOCTYPE html>
+<html lang="es">
 
 <head>
-    <script src="../assets/js/color-modes.js"></script>
-
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
@@ -18,7 +16,6 @@
     <!-- Custom styles for this template -->
     <link href="../css/carousel.css" rel="stylesheet">
     <link href="../css/headers.css" rel="stylesheet">
-
 </head>
 
 <body>
@@ -135,14 +132,7 @@
                                 Home
                             </a>
                         </li>
-                        <!-- <li>
-              <a href="#" class="nav-link text-white">
-                <svg class="bi d-block mx-auto mb-1" width="24" height="24">
-                  <use xlink:href="#grid" />
-                </svg>
-                Productos
-              </a>
-            </li> -->
+
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
                                 aria-expanded="false">
@@ -152,16 +142,16 @@
                                 Productos
                             </a>
                             <div class="dropdown-menu" aria-labelledby="productosdropdown">
-                                <a class="dropdown-item" href="./pages/memoria.html">RAM</a>
-                                <a class="dropdown-item" href="/pages/procesadores.html">Procesadores</a>
-                                <a class="dropdown-item" href="/pages/gpu.html">GPU</a>
-                                <a class="dropdown-item" href="/pages/mouse.html">Mouse</a>
-                                <a class="dropdown-item" href="/pages/teclados.html">Teclado</a>
+                                <a class="dropdown-item" href="../pages/memoria.html">RAM</a>
+                                <a class="dropdown-item" href="../pages/procesadores.html">Procesadores</a>
+                                <a class="dropdown-item" href="../pages/gpu.html">GPU</a>
+                                <a class="dropdown-item" href="../pages/mouse.html">Mouse</a>
+                                <a class="dropdown-item" href="../pages/teclados.html">Teclado</a>
                             </div>
 
                         </li>
                         <li>
-                            <a href="#" class="nav-link text-white">
+                            <a href="../pages/carrito.html" class="nav-link text-white">
                                 <svg class="bi d-block mx-auto mb-1" width="24" height="24">
                                     <use xlink:href="#table" />
                                 </svg>
@@ -169,13 +159,13 @@
                             </a>
                         </li>
                         <!-- <li>
-              <a href="#" class="nav-link text-white">
-                <svg class="bi d-block mx-auto mb-1" width="24" height="24">
-                  <use xlink:href="#people-circle" />
-                </svg>
-                Customers
-              </a>
-            </li> -->
+                <a href="./pages/ejemplo.html" class="nav-link text-white">
+                  <svg class="bi d-block mx-auto mb-1" width="24" height="24">
+                    <use xlink:href="#people-circle" />
+                  </svg>
+                  Customers
+                </a>
+              </li> -->
                     </ul>
                 </div>
                 <form class="d-flex" role="search">
@@ -188,159 +178,31 @@
 
     <main>
 
-        <!-- <div id="myCarousel" class="carousel slide" data-ride="carousel"> -->
-        <!-- indicadores -->
+        <header data-bs-theme="dark">
 
-        <div id="carouselPrinc" class="carousel slide">
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img src="../assets/img/img_carousel/asrock-series.jpg" class="d-block w-100" alt="MB asrock-series">
-                </div>
-                <div class="carousel-item">
-                    <img src="../assets/img/img_carousel/cartao-de-expansao-seagate.jpg" class="d-block w-100"
-                        alt="Memoria Expansion Segate">
+            <!-- PRODUCTOS  -->
+            <div class="container">
 
-                </div>
-                <div class="carousel-item">
-                    <img src="../assets/img/img_carousel/macrovip-max.jpg" class="d-block w-100" alt="MB macrovip-max">
-                </div>
-                <div class="carousel-item">
-                    <img src="../assets/img/img_carousel/redragon.jpg" class="d-block w-100" alt="Redragon">
-                </div>
+
             </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselPrinc" data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselPrinc" data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Next</span>
-            </button>
-        </div>
-
-        <!-- Marketing messaging and featurettes
-    ================================================== -->
-        <!-- Wrap the rest of the page in another container to center all the content. -->
-
-        <div class="container marketing">
-
-            <!-- Three columns of text below the carousel -->
-            <div class="row">
-
-                <div class="col-lg-4">
-                    <a href="../pages/placamadres.html">
-                        <img class="bd-placeholder-img rounded-circle" width="140" height="140"
-                            src="../assets/img/mb/placas-mae-butt.jpg">
-                    </a>
-                    <h2 class="fw-normal">Motherboard</h2>
-                    <p>Con los rápidos cambios tecnológicos, sigue las últimas tendencias y ofrece a los clientes los
-                        recursos y
-                        tecnologías avanzadas más recientes.</p>
-                    <p><a class="btn btn-secondary" href="../pages/placamadres.html">Visitar &raquo;</a></p>
-                </div><!-- /.col-lg-4 -->
-
-                <div class="col-lg-4">
-
-                    <a href="../pages/gpu.html">
-                        <img class="bd-placeholder-img rounded-circle" width="140" height="140"
-                            src="../assets/img/gpu/placas-de-video.jpg">
-                    </a>
-                    <h2 class="fw-normal">Placa de Video</h2>
-                    <p>Para aquellos que desean una actualización de GPU que mejore significativamente el rendimiento
-                        gráfico de
-                        su computadora.
-                        Ya sea para tareas cotidianas o juegos.</p>
-                    <p><a class="btn btn-secondary" href="../pages/gpu.html">Visitar &raquo;</a></p>
-                </div><!-- /.col-lg-4 -->
-
-                <div class="col-lg-4">
-                    <a href="../pages/memoria.html">
-                        <img class="bd-placeholder-img rounded-circle" width="140" height="140"
-                            src="../assets/img/g/memoria-ram.jpg">
-                    </a>
-                    <h2 class="fw-normal">Memoria RAM</h2>
-
-                    <p>Un poderoso aumento de velocidad para juegos, edición de video y renderizado, está lista para
-                        Intel y AMD
-                        Ryzen.</p>
-                    <p><a class="btn btn-secondary" href="../pages/memoria.html">Visitar &raquo;</a></p>
-                </div><!-- /.col-lg-4 -->
-            </div><!-- /.row -->
-
-
-            <!-- START THE FEATURETTES -->
-
-            <hr class="featurette-divider">
-
-            <div class="row featurette">
-                <div class="col-md-7">
-                    <a class="mylink" href="../pages/mouse.html">
-                        <h2 class="featurette-heading fw-normal lh-1">KING PRO M16.
-                    </a><span class="text-body-secondary"><br>100% enfocado en el rendimiento, el K1ng Pro es nuestro
-                        ratón
-                        tope de gama para los jugadores más competitivos.</span></h2>
-                    <p class="lead">Descubre todo el poder del rey.</p>
-                </div>
-                <div class="col-md-5">
-                    <iframe
-                        src="https://www.youtube.com/embed/watch?v=iP6nWMvfu-U?&controls=0&mute=1&showinfo=0&rel=0&autoplay=0&loop=0&modestbranding=1&playlist=iP6nWMvfu-U&cc_load_policy=0"
-                        allowfullscreen="allowfullscreen" allow="autoplay" frameborder="0" class="w-100 h-100"></iframe>
-                </div>
-            </div>
-
-            <hr class="featurette-divider">
-
-            <div class="row featurette">
-                <div class="col-md-7 order-md-2">
-                    <a class="mylink" href="../pages/procesadores.html">
-                        <h2 class="featurette-heading fw-normal lh-1">AMD Ryzen™ 7 9800X3D.
-                    </a><span class="text-body-secondary"> <br> Está aquí </span></h2>
-                    <p class="lead">El procesador para gaming más rápido que el mundo ha visto.</p>
-                </div>
-                <div class="col-md-5 order-md-1">
-                    <iframe
-                        src="https://www.youtube.com/embed/q1CPU085uys?&controls=0&mute=1&showinfo=0&rel=0&autoplay=0&loop=0&modestbranding=1&playlist=q1CPU085uys&cc_load_policy=0"
-                        allowfullscreen="allowfullscreen" allow="autoplay" frameborder="0" class="w-100 h-100">
-                    </iframe>
-                    <!-- <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="var(--bs-secondary-bg)"/><text x="50%" y="50%" fill="var(--bs-secondary-color)" dy=".3em">500x500</text></svg> -->
-                </div>
-            </div>
-
-            <hr class="featurette-divider">
-
-            <div class="row featurette">
-                <div class="col-md-7">
-                    <a class="mylink" href="../pages/teclados.html">
-                        <h2 class="featurette-heading fw-normal lh-1">RAZER BLACKWIDOW V4 PRO 75%.
-                    </a><span class="text-body-secondary"></span></h2>
-                    <p class="lead">Desde los switches mecánicos Razer™ ganadores de múltiples premios, diseñados
-                        específicamente
-                        para juegos, hasta un híbrido meca-membrana, descubre el teclado de juegos ideal para ti:
-                        equipado con
-                        velocidad, precisión y la experiencia de escritura que prefieras.</p>
-                </div>
-                <div class="col-md-5">
-                    <iframe
-                        src="https://www.youtube.com/embed/yvfsL__p1UY?&controls=0&mute=1&showinfo=0&rel=0&autoplay=01&loop=0&modestbranding=1&playlist=yvfsL__p1UY&cc_load_policy=0"
-                        allowfullscreen="allowfullscreen" allow="autoplay" frameborder="0" class="w-100 h-100"></iframe>
-                </div>
-            </div>
-
-            <hr class="featurette-divider">
-
-            <!-- /END THE FEATURETTES -->
-
-        </div><!-- /.container -->
-
-
-        <!-- FOOTER -->
-        <footer class="container">
-            <p class="float-end"><a href="#">Back to top</a></p>
-            <p>&copy; 2017–2024 Company, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
-        </footer>
+            <!-- FIN PRODUCTOS -->
+            <section class="paginacion">
+                <ul>
+                    <li><a href="./carrito.html" class="active">1</a></li>
+                    <!-- <li><a href="pagina2.html">2</a></li>
+                    <li><a href="pagina3.html">3</a></li>
+                    <li><a href="pagina4.html">4</a></li>
+                    <li><a href="pagina5.html">5</a></li> -->
+                </ul>
+            </section>
     </main>
+    <!-- FOOTER -->
+    <footer class="container">
+        <p class="float-end"><a href="#">Back to top</a></p>
+        <p>&copy; J&O Solutions, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
+    </footer>
     <script src="../assets/dist/js/bootstrap.bundle.min.js"></script>
-
+    <script src="../assets/js/color-modes.js"></script>
 </body>
 
 </html>
