cierre del /div en footer

--- a/pages/gpu.html
+++ b/pages/gpu.html
@@ -128,10 +128,10 @@
                         <li>
                             <a href="../index.html" class="nav-link text-secondary">
                                 <svg class="bi d-block mx-auto mb-1" width="24" height="24">
-                                  <use xlink:href="#home" />
+                                    <use xlink:href="#home" />
                                 </svg>
                                 Home
-                              </a>
+                            </a>
                         </li>
 
                         <li class="nav-item dropdown">
@@ -213,60 +213,55 @@
                 </ul>
             </section>
     </main>
-       <!-- FOOTER -->
-  <!-- Remove the container if you want to extend the Footer to full width. -->
-<div class="container my-5">
+    <!-- FOOTER -->
+    <!-- Remove the container if you want to extend the Footer to full width. -->
+    <div class="container my-5">
 
-    <footer class="bg-dark text-center text-white">
-    <!-- Grid container -->
-    <div class="container p-4 pb-0">
-      <!-- Section: Social media -->
-      <section class="mb-4">
-        <!-- Facebook -->
-        <a class="btn btn-outline-light btn-floating m-1" href="https://facebook.com/" role="button">
-          
-          <i class="bi bi-facebook" width="30" height="30"></i>
-        </a>
-  
-        <!-- Twitter -->
-        <a class="btn btn-outline-light btn-floating m-1" href="https://x.com/?lang=es&mx=2" role="button"
-          ><i class="bi bi-twitter"></i
-        ></a>
-  
-        <!-- Google -->
-        <a class="btn btn-outline-light btn-floating m-1" href="mailto:jyosolutions@gmail.com.ar" role="button"
-          ><i class="bi bi-google"></i
-        ></a>
-  
-        <!-- Instagram -->
-        <a class="btn btn-outline-light btn-floating m-1" href="https://www.instagram.com/" role="button"
-          ><i class="bi bi-instagram"></i
-        ></a>
-  
-        <!-- Linkedin -->
-        <a class="btn btn-outline-light btn-floating m-1" href="https://wa.me/+5493757659366" role="button"
-          ><i class="bi bi-whatsapp"></i
-        ></a>
-  
-        <!-- Github -->
-        <a class="btn btn-outline-light btn-floating m-1" href="https://github.com/JulianAntunez" role="button"
-          ><i class="bi bi-github"></i
-        ></a>
-      </section>
-      <!-- Section: Social media -->
+        <footer class="bg-dark text-center text-white">
+            <!-- Grid container -->
+            <div class="container p-4 pb-0">
+                <!-- Section: Social media -->
+                <section class="mb-4">
+                    <!-- Facebook -->
+                    <a class="btn btn-outline-light btn-floating m-1" href="https://facebook.com/" role="button">
+
+                        <i class="bi bi-facebook" width="30" height="30"></i>
+                    </a>
+
+                    <!-- Twitter -->
+                    <a class="btn btn-outline-light btn-floating m-1" href="https://x.com/?lang=es&mx=2"
+                        role="button"><i class="bi bi-twitter"></i></a>
+
+                    <!-- Google -->
+                    <a class="btn btn-outline-light btn-floating m-1" href="mailto:jyosolutions@gmail.com.ar"
+                        role="button"><i class="bi bi-google"></i></a>
+
+                    <!-- Instagram -->
+                    <a class="btn btn-outline-light btn-floating m-1" href="https://www.instagram.com/" role="button"><i
+                            class="bi bi-instagram"></i></a>
+
+                    <!-- Linkedin -->
+                    <a class="btn btn-outline-light btn-floating m-1" href="https://wa.me/+5493757659366"
+                        role="button"><i class="bi bi-whatsapp"></i></a>
+
+                    <!-- Github -->
+                    <a class="btn btn-outline-light btn-floating m-1" href="https://github.com/JulianAntunez"
+                        role="button"><i class="bi bi-github"></i></a>
+                </section>
+                <!-- Section: Social media -->
+            </div>
+            <!-- Grid container -->
+
+            <!-- Copyright -->
+            <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+                © 2025 Copyright:
+                <a class="text-white" href="https://jyosolutions.com.ar/">J&O Solutions</a>
+            </div>
+            <!-- Copyright -->
+        </footer>
     </div>
-    <!-- Grid container -->
-  
-    <!-- Copyright -->
-    <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
-      © 2025 Copyright:
-      <a class="text-white" href="https://jyosolutions.com.ar/">J&O Solutions</a>
-    </div>
-    <!-- Copyright -->
-  </footer>
-    
-          <script src="../assets/dist/js/bootstrap.bundle.min.js"></script>
-          <script src="../assets/js/color-modes.js"></script>
+        <script src="../assets/dist/js/bootstrap.bundle.min.js"></script>
+        <script src="../assets/js/color-modes.js"></script>
 </body>
 
 </html>
