--- a/pages/teclados.html
+++ b/pages/teclados.html
@@ -263,58 +263,54 @@
   <!-- FOOTER -->
   <!-- FOOTER -->
   <!-- Remove the container if you want to extend the Footer to full width. -->
-<div class="container my-5">
+  <div class="container my-5">
 
-  <footer class="bg-dark text-center text-white">
-  <!-- Grid container -->
-  <div class="container p-4 pb-0">
-    <!-- Section: Social media -->
-    <section class="mb-4">
-      <!-- Facebook -->
-      <a class="btn btn-outline-light btn-floating m-1" href="https://facebook.com/" role="button">
-        
-        <i class="bi bi-facebook" width="30" height="30"></i>
-      </a>
+    <footer class="bg-dark text-center text-white">
+      <!-- Grid container -->
+      <div class="container p-4 pb-0">
+        <!-- Section: Social media -->
+        <section class="mb-4">
+          <!-- Facebook -->
+          <a class="btn btn-outline-light btn-floating m-1" href="https://facebook.com/" role="button">
 
-      <!-- Twitter -->
-      <a class="btn btn-outline-light btn-floating m-1" href="https://x.com/?lang=es&mx=2" role="button"
-        ><i class="bi bi-twitter"></i
-      ></a>
+            <i class="bi bi-facebook" width="30" height="30"></i>
+          </a>
 
-      <!-- Google -->
-      <a class="btn btn-outline-light btn-floating m-1" href="mailto:jyosolutions@gmail.com.ar" role="button"
-        ><i class="bi bi-google"></i
-      ></a>
+          <!-- Twitter -->
+          <a class="btn btn-outline-light btn-floating m-1" href="https://x.com/?lang=es&mx=2" role="button"><i
+              class="bi bi-twitter"></i></a>
 
-      <!-- Instagram -->
-      <a class="btn btn-outline-light btn-floating m-1" href="https://www.instagram.com/" role="button"
-        ><i class="bi bi-instagram"></i
-      ></a>
+          <!-- Google -->
+          <a class="btn btn-outline-light btn-floating m-1" href="mailto:jyosolutions@gmail.com.ar" role="button"><i
+              class="bi bi-google"></i></a>
 
-      <!-- Linkedin -->
-      <a class="btn btn-outline-light btn-floating m-1" href="https://wa.me/+5493757659366" role="button"
-        ><i class="bi bi-whatsapp"></i
-      ></a>
+          <!-- Instagram -->
+          <a class="btn btn-outline-light btn-floating m-1" href="https://www.instagram.com/" role="button"><i
+              class="bi bi-instagram"></i></a>
 
-      <!-- Github -->
-      <a class="btn btn-outline-light btn-floating m-1" href="https://github.com/JulianAntunez" role="button"
-        ><i class="bi bi-github"></i
-      ></a>
-    </section>
-    <!-- Section: Social media -->
+          <!-- Linkedin -->
+          <a class="btn btn-outline-light btn-floating m-1" href="https://wa.me/+5493757659366" role="button"><i
+              class="bi bi-whatsapp"></i></a>
+
+          <!-- Github -->
+          <a class="btn btn-outline-light btn-floating m-1" href="https://github.com/JulianAntunez" role="button"><i
+              class="bi bi-github"></i></a>
+        </section>
+        <!-- Section: Social media -->
+      </div>
+      <!-- Grid container -->
+
+      <!-- Copyright -->
+      <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+        © 2025 Copyright:
+        <a class="text-white" href="https://jyosolutions.com.ar/">J&O Solutions</a>
+      </div>
+      <!-- Copyright -->
+    </footer>
   </div>
-  <!-- Grid container -->
 
-  <!-- Copyright -->
-  <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
-    © 2025 Copyright:
-    <a class="text-white" href="https://jyosolutions.com.ar/">J&O Solutions</a>
-  </div>
-  <!-- Copyright -->
-</footer>
-  
-  <script src="../assets/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="../assets/js/color-modes.js"></script>
+    <script src="../assets/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="../assets/js/color-modes.js"></script>
 </body>
 
 </html>
